// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "core/image/image.proto";
import "gapis/service/path/path.proto";

package gles;

// GAPIS internal structure.
message GLSLParseResolvable {
	string shader_source = 1;
	uint32 language = 2;
}

// Resolves to []byte.
message ReadGPUTextureDataResolveable {
	path.Capture capture = 1;
	path.Device device = 2;
	uint64 after = 3;
	uint64 thread = 4;
	uint32 texture = 5;
	uint32 level = 6;
	uint32 layer = 7;
	uint32 data_format = 8;
	uint32 data_type = 9;
}